# ai-demo-project

./: .env.example  .gitignore  README.md  docker-compose.qdrant.yml  pyproject.toml
config/: industries.yaml  tools_config.json
config/clients/: example_client.yaml  hawthorn_advisors.yaml  think_macro_technologies.yaml
docs/: ai-investor-matching-real-estate.drawio  audit-firm-multi-agent-langgraph-mcp.drawio  property-valuation-ai-agent.drawio  stripe-installment-billing.drawio
src/briefing_agent/: __init__.py  approval.py  config.py  graph.py  main.py  types.py
src/briefing_agent/models/: __init__.py  llm.py
src/briefing_agent/output/: docx_writer.py
src/briefing_agent/sources/: __init__.py  economic.py  other.py  providers.py  registry.py  rss.py
src/competitor_alternatives_agent/: __init__.py  discovery.py  gap_analysis.py  graph.py  mcp_tools.py  scoring.py  types.py
src/competitor_alternatives_agent/output/: report_markdown.py
src/rag/: PRIVACY.md  __init__.py  agent.py  chunking.py  cli.py  config.py  ingest.py  models.py  preprocessing.py  protocols.py  questions.py  retriever.py
src/rag/embeddings/: __init__.py  ollama.py
src/rag/loaders/: __init__.py  pdf_loader.py  tabular_loader.py
src/rag/privacy/: __init__.py  audit.py  fields.py  pseudonymizer.py  redactor.py  retention.py
src/rag/vectorstore/: __init__.py  qdrant.py
src/stakeholder_mapper_agent/: __init__.py  graph.py  policy_scope.py  profile.py  scoring.py  types.py
tests/: test_agent2.py  test_agent3.py  test_config.py  test_docx_writer.py  test_registry.py
(+7 files in other folders)
