[project]
name = "langgraph-weekly-briefing-agent"
version = "0.1.0"
description = "Client-specific weekly media and economic data briefing agent"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "langgraph",
  "langchain-community",
  "langchain-mcp-adapters",
  "newspaper3k",
  "lxml_html_clean",
  "openai",
  "httpx",
  "feedparser",
  "python-docx",
  "openpyxl",
  "pyyaml",
  "typer",
  "pydantic-ai",
  "pydantic-settings",
  "qdrant-client",
  "pypdf",
  "langchain-text-splitters",
]

[project.optional-dependencies]
dev = [
  "pytest",
]

[project.scripts]
briefing-agent = "briefing_agent.main:app"
company-rag = "rag.cli:app"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
